--- a/Aula 04/ex001.html
+++ b/Aula 04/ex001.html
@@ -18,6 +18,8 @@
   <p>Este local é destinado a todos os tios babões por seus sobrinhos...</p>
   <script>
     window.alert('Minha primeira mensagem!')
+    window.confirm('Está gostando de JS?')
+    window.prompt('Qual é o seu nome?')
   </script>
 </body>
 </html>
